--- a/src/terms-of-use.html
+++ b/src/terms-of-use.html
@@ -11,13 +11,8 @@
 <body>
   <div class="container">
 
-    <h1>Supplemental Privacy Policy for California Residents</h1>
-
-    <h3>Introduction</h3>
-    <p>These Website Standard Terms and Conditions written on this webpage shall manage your use of our website, Koin
-      Mobile LLC accessible at
-      <a (click)="openBrowser('https://www.koinpayments.com')" class="text-primary fw-500">www.koinpayments.com</a>.
-    </p>
+    <h1>Terms of Use</h1>
+    
     <p>These Terms will be applied fully and affect to your use of this Website. By using this Website, you agreed to
       accept all terms and conditions written in here. You must not use this Website if you disagree with any of these
       Website Standard Terms and Conditions.</p>
