--- a/old/koin-privacy-policy.html
+++ b/old/koin-privacy-policy.html
@@ -5,71 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Koin Privacy Policy</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-    }
-
-    html,body {
-      font-family: "Montserrat";
-      background-color: #F2F6F6;
-      font-weight: 500;
-      line-height: 1.6;
-      color: #404040;
-    }
-
-    .container {
-      width: 100%;
-      margin: 0 auto;
-      padding: 2rem 1.5rem 4rem 1.5rem;
-    }
-
-    h1 {
-      color: #211F21;
-      margin-bottom: 1.5rem;
-      font-weight: 600;
-    }
-
-    h4 {
-      font-size: 1rem;
-      margin: .5rem 0 .5rem 0;
-      font-weight: 600;
-    }
-
-    p {
-      font-size: 0.875rem;
-      margin-top: 1rem;
-      margin-bottom: 1rem;
-    }
-
-    a {
-      color: #543D8A;
-      font-weight: 600;
-      text-decoration: none;
-    }
-
-    ol,
-    ul {
-      margin-top: 1rem;
-      margin-bottom: 1rem;
-      font-size: 0.875rem;
-    }
-
-    li {
-      margin-bottom: .5rem;
-    }
-
-    table {
-      border-collapse: collapse;
-    }
-  </style>
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
   <div class="container">
+
     <h1>Koin Privacy Policy</h1>
 
     <p>
@@ -84,7 +25,7 @@
       This policy is effective as of 31 March 2021 and was last updated on 31 March 2021.
     </p>
 
-    <h4>Information We Collect</h4>
+    <h3>Information We Collect</h3>
     <p>
       Information we collect includes both information you knowingly and actively provide us
       when using or participating in any of our services and promotions, and any information
@@ -92,7 +33,7 @@
       services.
     </p>
 
-    <h4>Log Data</h4>
+    <h3>Log Data</h3>
     <p>
       When you visit our website, our servers may automatically log the standard data
       provided by your web browser. It may include your device’s Internet Protocol (IP)
@@ -107,7 +48,7 @@
     </p>
 
 
-    <h4>Collection and Use of Information</h4>
+    <h3>Collection and Use of Information</h3>
     <p>
       We may collect personal information from you when you do any of the following on our
       website:
@@ -128,7 +69,7 @@
       information or research data we receive from other trusted sources.
     </p>
 
-    <h4>Geo Locations</h4>
+    <h3>Geo Locations</h3>
     <p>Koin Mobile, LLC requests consent to enable us to know your location. Koin's Location Determination feature will
       determine and report the location of devices that engage, or attempt to engage, in wallet usage and wagering
       activity by accessing the device's IP address, MAC address, RFID, hardware embedded article/production number,
@@ -153,7 +94,7 @@
       Location Information is retained for at least the minimum time as required by applicable regulatory bodies and
       other government agencies and related entities, as well as state and federal regulations.</p>
 
-    <h4>Security of Your Personal Information</h4>
+    <h3>Security of Your Personal Information</h3>
     <p>
       When we collect and process personal information, and while we retain this information,
       we will protect it within commercially acceptable means to prevent loss and theft, as well
@@ -170,7 +111,7 @@
       own information within the bounds of our services.
     </p>
 
-    <h4>How Long We Keep Your Personal Information</h4>
+    <h3>How Long We Keep Your Personal Information</h3>
     <p>
       We keep your personal information only for as long as we need to. This time period may
       depend on what we are using your information for, in accordance with this privacy
@@ -184,13 +125,13 @@
     </p>
 
 
-    <h4>Children’s Privacy</h4>
+    <h3>Children’s Privacy</h3>
     <p>
       We do not aim any of our products or services directly at children under the age of 13,
       and we do not knowingly collect personal information about children under 13.
     </p>
 
-    <h4>International Transfers of Personal Information </h4>
+    <h3>International Transfers of Personal Information </h3>
     <p>
       The personal information we collect is stored and/or processed where we or our partners, affiliates, and
       third-party providers maintain facilities. Please be aware that the locations to which we store, process, or
@@ -202,7 +143,7 @@
       privacy policy.
     </p>
 
-    <h4>Your Rights and Controlling Your Personal Information</h4>
+    <h3>Your Rights and Controlling Your Personal Information</h3>
     <p>
       You always retain the right to withhold personal information from us, with the
       understanding that your experience of our website may be affected. We will not
@@ -239,14 +180,14 @@
       protection authority in relation to your complaint.
     </p>
 
-    <h4>Limits of Our Policy</h4>
+    <h3>Limits of Our Policy</h3>
     <p>
       Our website may link to external sites that are not operated by us. Please be aware that we have no control over
       the content and policies of those sites, and cannot accept responsibility or liability for their respective
       privacy practices.
     </p>
 
-    <h4>Changes to This Policy</h4>
+    <h3>Changes to This Policy</h3>
     <p>
       At our discretion, we may change our privacy policy to reflect updates to our business processes, current
       acceptable practices, or legislative or regulatory changes. If we decide to change this privacy policy, we will
@@ -257,7 +198,7 @@
       applicable, any new uses of your personal information.
     </p>
 
-    <h4>Contact Us</h4>
+    <h3>Contact Us</h3>
     <p>
       For any questions or concerns regarding your privacy, you may contact us using the following details: <a
         href="https://koinpayments.com/contact/?s=Sales%20Inquiry">https://www.koinpayments.com/contact-us</a>
