--- a/src/bank-privacy-policy.html
+++ b/src/bank-privacy-policy.html
@@ -5,7 +5,67 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bank Privacy Policy</title>
-  <link rel="stylesheet" href="main.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+    }
+
+    html,body {
+      font-family: "Montserrat";
+      background-color: #F2F6F6;
+      font-weight: 500;
+      line-height: 1.6;
+      color: #404040;
+    }
+
+    .container {
+      width: 100%;
+      margin: 0 auto;
+      padding: 2rem 1.5rem 4rem 1.5rem;
+    }
+
+    h1 {
+      color: #211F21;
+      margin-bottom: 1.5rem;
+      font-weight: 600;
+    }
+
+    h4 {
+      font-size: 1rem;
+      margin: .5rem 0 .5rem 0;
+      font-weight: 600;
+    }
+
+    p {
+      font-size: 0.875rem;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    a {
+      color: #543D8A;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    ol,
+    ul {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      font-size: 0.875rem;
+    }
+
+    li {
+      margin-bottom: .5rem;
+    }
+
+    table {
+      border-collapse: collapse;
+    }
+  </style>
 </head>
 
 <body>
@@ -13,15 +73,15 @@
 
     <h1>Bank Privacy Policy</h1>
 
-    <h3>Privacy Disclosure</h3>
-    <h3>FACTS: WHAT DOES Sutton Bank DO WITH YOUR PERSONAL INFORMATION?</h3>
+    <h4>Privacy Disclosure</h4>
+    <h4>FACTS: WHAT DOES Sutton Bank DO WITH YOUR PERSONAL INFORMATION?</h4>
 
-    <h3>Why?</h3>
+    <h4>Why?</h4>
     <p>Financial companies choose how they share your personal information. Federal law gives consumers the right to
       limit some but not all sharing. Federal law also requires us to tell you how we collect, share, and protect your
       personal information. Please read this notice carefully to understand what we do.</p>
 
-    <h3>What?</h3>
+    <h4>What?</h4>
     <p>The types of
       personal information we collect and share depend on the product or service you have
       with us. This information can include:</p>
@@ -42,16 +102,16 @@
         <tr style="display:table-row;">
           <th
             style="display:table-cell;padding:4px 12px;width:40%;background-color:#bbb;border:solid 1px #bbb;color:#fff;text-align:left;vertical-align:middle;">
-            <h4 style="margin:4px 0;font-size:1.125em;color:#333;font-weight:bold;">Reasons we can share your personal
+            <h4 style="margin:4px 0;font-size:1.125em;color:#333;font-weight:semibold;">Reasons we can share your personal
               information</h4>
           </th>
-          <th
+          <th 
             style="display:table-cell;padding:4px 12px;width:30%;background-color:#bbb;border:solid 1px #bbb;color:#fff;text-align:center;vertical-align:middle;">
-            <h4 style="margin:4px 0;font-size:1.125em;color:#333;font-weight:bold;">Does Sutton Bank share?</h4>
+            <h4 style="margin:4px 0;font-size:1.125em;color:#333;font-weight:semibold;">Does Sutton Bank share?</h4>
           </th>
           <th
             style="display:table-cell;padding:4px 12px;width:30%;background-color:#bbb;border:solid 1px #bbb;color:#fff;text-align:center;vertical-align:middle;">
-            <h4 style="margin:4px 0;font-size:1.125em;color:#333;font-weight:bold;">Can you limit this sharing?</h4>
+            <h4 style="margin:4px 0;font-size:1.125em;color:#333;font-weight:semibold;">Can you limit this sharing?</h4>
           </th>
         </tr>
       </thead>
@@ -136,7 +196,7 @@
         <tr style="display:table-row;">
           <td
             style="display:table-cell;padding:4px 12px;width:20%;border:solid 1px #bbb;background-color:#bbb;color:#fff;vertical-align:middle;">
-            <h4 style="margin:4px 0;font-size:1.125em;color:#333;font-weight:bold;">Questions?</h4>
+            <h4 style="margin:4px 0;font-size:1.125em;color:#333;font-weight:semibold;">Questions?</h4>
           </td>
           <td style="display:table-cell;padding:4px 12px;width:80%;border:solid 1px #bbb;vertical-align:middle;">
             <p style="color:#333;vertical-align:middle;">Call toll-free 1-800-422-3641 or go to <a
@@ -153,7 +213,7 @@
           <th
             style="display:table-cell;padding:4px 12px;width:100%;background-color:#bbb;border:solid 1px #bbb;color:#fff;text-align:left;vertical-align:middle;"
             colspan="2">
-            <h4 style="margin:4px 0;font-size:1.125em;color:#333;font-weight:bold;">What we do</h4>
+            <h4 style="margin:4px 0;font-size:1.125em;color:#333;font-weight:semibold;">What we do</h4>
           </th>
         </tr>
       </thead>
