--- a/src/terms-of-use.html
+++ b/src/terms-of-use.html
@@ -5,7 +5,68 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Terms of Use</title>
-  <link rel="stylesheet" href="main.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+    }
+
+    html,
+    body {
+      font-family: "Montserrat";
+      background-color: #F2F6F6;
+      font-weight: 500;
+      line-height: 1.6;
+      color: #404040;
+    }
+
+    .container {
+      width: 100%;
+      margin: 0 auto;
+      padding: 2rem 1.5rem 4rem 1.5rem;
+    }
+
+    h1 {
+      color: #211F21;
+      margin-bottom: 1.5rem;
+      font-weight: 600;
+    }
+
+    h4 {
+      font-size: 1rem;
+      margin: .5rem 0 .5rem 0;
+      font-weight: 600;
+    }
+
+    p {
+      font-size: 0.875rem;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    a {
+      color: #543D8A;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    ol,
+    ul {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      font-size: 0.875rem;
+    }
+
+    li {
+      margin-bottom: .5rem;
+    }
+
+    table {
+      border-collapse: collapse;
+    }
+  </style>
 </head>
 
 <body>
