--- a/src/banks-terms-condition.html
+++ b/src/banks-terms-condition.html
@@ -56,7 +56,8 @@
 
 <body>
   <div class="container">
-    <h1>Bank Cardholder Agreement</h1>
+    <h1 style="margin-bottom: 16px;">Bank Cardholder Agreement</h1>
+    <p style="margin-top: 0;">Revised 11.15.2023</p>
     <table class="bordered">
       <tr>
         <td style="padding-bottom: 40px; width: 25%;">
