--- a/src/banks-terms-condition.html
+++ b/src/banks-terms-condition.html
@@ -56,7 +56,9 @@
 
 <body>
   <div class="container">
-    <h1 style="margin-bottom: 16px;">Bank Cardholder Agreement</h1>
+    <section class="document-header">KOIN - Card Holder Agreement</section>
+
+    <h1 style="margin-bottom: 8px;">KOIN - Card Holder Agreement</h1>
     <p style="margin-top: 0;">Revised 11.15.2023</p>
     <table class="bordered">
       <tr>
