--- a/src/california-privacy-policy.html
+++ b/src/california-privacy-policy.html
@@ -71,7 +71,8 @@
 
 <body>
   <div class="container">
-
+    <section class="document-header">Supplemental Privacy Policy for California Residents</section>
+    
     <h1>Supplemental Privacy Policy for California Residents</h1>
 
     <p>This Privacy Policy applies to <strong>California residents only</strong> and supplements the KOIN general
