--- a/src/esign-policy.html
+++ b/src/esign-policy.html
@@ -71,6 +71,7 @@
 
 <body>
   <div class="container">
+    <section class="document-header">E-Sign Language Disclosure</section>
 
     <h1>E-Sign Language Disclosure</h1>
 
