--- a/src/terms-of-use.html
+++ b/src/terms-of-use.html
@@ -73,87 +73,154 @@
   <div class="container">
 
     <h1>Terms of Use</h1>
-    
-    <p>These Terms will be applied fully and affect to your use of this Website. By using this Website, you agreed to
-      accept all terms and conditions written in here. You must not use this Website if you disagree with any of these
-      Website Standard Terms and Conditions.</p>
-    <p>Minors or people below 18 years old are not allowed to use this Website.</p>
+
+    <p>These Website Standard Terms and Conditions written on this webpage shall manage your use of our website, Koin
+      Mobile LLC accessories at <a (click)="openBrowser('https://www.koinpayments.com')">www.koinpayments.com.</a></p>
+
+    <p>These terms will be applied fully and affect your use of this website. By using
+      this website, you agree to accept all terms and conditions written in here. You
+      must not use this Website if you disagree with any of these Website and
+      Standard Terms and Conditions.</p>
+
+    <p>Minors or people under the age of 18 years old are not allowed to use this website.</p>
+
 
     <h3>Intellectual Property Rights</h3>
-    <p>Other than the content you own, under these Terms, Koin Mobile LLC and/or its licensors own all the intellectual
-      property rights and materials contained in this Website.</p>
-    <p>You are granted limited license only for purposes of viewing the material contained on this Website.</p>
+    <p>Other than the content you own, under these Terms, Koin Mobile LLC and/or
+      its licensors own all the intellectual property rights and materials contained in
+      this Website. </p>
+    <p>You are granted limited license only for purposes of viewing the material
+      contained on this website. </p>
 
     <h3>Log Data</h3>
-    <p>When you visit our website, our servers may automatically log the standard data provided by your web browser. It
-      may include your device&apos;s Internet Protocol (IP) address, your browser type and version, the pages you visit,
-      the
-      time and date of your visit, the time spent on each page, other details about your visit, and technical details
-      that
-      occur in conjunction with any errors you may encounter.</p>
-    <p>Please be aware that while this information may not be personally identifying by itself, it may be possible to
-      combine it with other data to personally identify individual persons.</p>
+    <p>When you visit our website, our servers may automatically log the standard data
+      provided by your web browser. It may include your device's Internet Protocol (IP)
+      address, your browser type and version, the pages you visit, the time and date of your
+      visit, the time spent on each page, other details about your visit, and technical details
+      that occur in conjunction with any errors you may encounter.</p>
+    <p>Please be aware that while this information may not be personally identifying by itself, it
+      may be possible to combine it with other data to personally identify individual persons.</p>
 
-    <h3>Restrictions</h3>
-    <p>You are specifically restricted from all of the following:</p>
-    <p>Publishing any Website material in any other media;selling, sublicensing and/or otherwise commercializing any
-      Website material;publicly performing and/or showing any Website material;using this Website in any way that is or
-      may be damaging to this Website;using this Website in any way that impacts user access to this Website;using this
-      Website contrary to applicable laws and regulations, or in any way may cause harm to the Website, or to any person
-      or business entity;engaging in any data mining, data harvesting, data extracting or any other similar activity in
-      relation to this Website;using this Website to engage in any advertising or marketing.</p>
-    <p>Certain areas of this Website are restricted from being access by you and Koin Mobile LLC may further restrict
-      access by you to any areas of this Website, at any time, in absolute discretion. Any user ID and password you may
-      have for this Website are confidential and you must maintain confidentiality as well.</p>
+    <h3>Collection and Use of Information</h3>
+    <p>We may collect personal information from you when you do any of the following on our
+      website:</p>
+    <p>Use a mobile device or web browser to access our content</p>
+    <p>Contact us via email, social media, or on any similar technologies</p>
+    <p>When you mention us on social media</p>
+    <p>We may collect, hold, use, and disclose information for the following purposes, and
+      personal information will not be further processed in a manner that is incompatible with
+      these purposes:</p>
+    <p>Please be aware that we may combine information we collect about you with general
+      information or research data we receive from other trusted sources.</p>
 
-    <h3>Your Content</h3>
-    <p>In these Website Standard Terms and Conditions, "Your Content" shall mean any audio, video text, images or other
-      material you choose to display on this Website. By displaying Your Content, you grant Koin Mobile LLC a
-      non-exclusive, worldwide irrevocable, sub licensable license to use, reproduce, adapt, publish, translate and
-      distribute it in any and all media.</p>
-    <p>Your Content must be your own and must not be invading any third-party’s rights. Koin Mobile LLC reserves the
-      right to remove any of Your Content from this Website at any time without notice.</p>
+    <h3>Geo Locations</h3>
+    <p>Koin Mobile, LLC requests consent to enable us to know your location. Koin’s Location Determination feature will
+      determine and report the location of devices that engage, or attempt to engage, in wallet usage and wagering
+      activity by accessing the device’s IP address, MAC address, RFID, hardware embedded article/production number,
+      embedded software number (such as UUID, Exif/IPTC/XMP or modern steganography), Wi-Fi positioning system, or
+      device GPS coordinates (collectively, “Location Information”). This information will be used for risk and fraud
+      purposes and/or to ensure you are physically located within a jurisdiction in which wallet or specific gaming
+      operations are permitted. We will not disclose, transfer or resell your Location Information to any additional
+      third parties except:</p>
+    <ol>
+      <li>where required by law, including, without limitation, as necessary to satisfy any law, regulation or
+        government agency request;</li>
+      <li>as necessary or appropriate to evaluate risk and fraud issues, and investigate, respond to and defend against
+        legal claims;</li>
+      <li>to protect our property and rights;</li>
+      <li>for the safety of the public or any person;</li>
+      <li>to stop any unfair, illegal, unethical, fraudulent, abusive or legally actionable activity.</li>
+      <li>to protect the security and integrity of Gaming Operations and any equipment used to make Gaming Operations
+        available; or</li>
+      <li>in the event of a merger, acquisition, bankruptcy or other sale of all or a portion of our assets.</li>
+    </ol>
+    <p>You may opt-out of Location Determination Feature at any time by changing the settings on your personal device.
+      Location Information is retained for at least the minimum time as required by applicable regulatory bodies and
+      other government agencies and related entities, as well as state and federal regulations.</p>
 
-    <h3>Your Content</h3>
-    <p>Please read Privacy Policy.</p>
+    <h3>Security of Your Personal Information</h3>
 
-    <h3>No warranties</h3>
-    <p>This Website is provided "as is," with all faults, and Koin Mobile LLC express no representations or warranties,
-      of any kind related to this Website or the materials contained on this Website. Also, nothing contained on this
-      Website shall be interpreted as advising you.</p>
+    <p>When we collect and process personal information, and while we retain this information,
+      we will protect it within commercially acceptable means to prevent loss and theft, as well
+      as unauthorized access, disclosure, copying, use, or modification.</p>
+    <p>Although we will do our best to protect the personal information you provide to us, we
+      advise that no method of electronic transmission or storage is 100% secure, and no one
+      can guarantee absolute data security. We will comply with laws applicable to us in
+      respect of any data breach.</p>
+    <p>You are responsible for selecting any password and its overall security strength,
+      ensuring the security of your own information within the bounds of our services.</p>
 
-    <h3>Limitation of liability</h3>
-    <p>In no event shall Koin Mobile LLC, nor any of its officers, directors and employees, shall be held liable for
-      anything arising out of or in any way connected with your use of this Website whether such liability is under
-      contract. Koin Mobile LLC, including its officers, directors and employees shall not be held liable for any
-      indirect, consequential or special liability arising out of or in any way related to your use of this Website.</p>
+    <h3>How Long We Keep Your Personal Information</h3>
+    <p>We keep your personal information only for as long as we need to. This time period may
+      depend on what we are using your information for, in accordance with this privacy
+      policy. If your personal information is no longer required, we will delete it or make it
+      anonymous by removing all details that identify you.</p>
+    <p>However, if necessary, we may retain your personal information for our compliance with
+      a legal, accounting, or reporting obligation or for archiving purposes in the public
+      interest, scientific, or historical research purposes or statistical purposes.</p>
 
-    <h3>Indemnification</h3>
-    <p>You hereby indemnify to the fullest extent Koin Mobile LLC from and against any and/or all liabilities, costs,
-      demands, causes of action, damages and expenses arising in any way related to your breach of any of the provisions
-      of these Terms.</p>
+    <h3>Children’s Privacy</h3>
+    <p>We do not aim any of our products or services directly at children under the age of 13,
+      and we do not knowingly collect personal information about children under 13.</p>
 
-    <h3>Severability</h3>
-    <p>If any provision of these Terms is found to be invalid under any applicable law, such provisions shall be deleted
-      without affecting the remaining provisions herein.</p>
+    <!--International Transfers of Personal Information-->
+    <h3>International Transfers of Personal Information</h3>
+    <p>The personal information we collect is stored and/or processed where we or our
+      partners, affiliates, and third-party providers maintain facilities. Please be aware that the
+      locations to which we store, process, or transfer your personal information may not have
+      the same data protection laws as the country in which you initially provided the
+      information. If we transfer your personal information to third parties in other countries: (i)
+      we will perform those transfers in accordance with the requirements of applicable law;
+      and (ii) we will protect the transferred personal information in accordance with this
+      privacy policy.</p>
 
-    <h3>Variation of Terms</h3>
-    <p>Koin Mobile LLC is permitted to revise these Terms at any time as it sees fit, and by using this Website you are
-      expected to review these Terms on a regular basis.</p>
+    <!--Your Rights and Controlling Your Personal Information-->
+    <h3>Your Rights and Controlling Your Personal Information</h3>
+    <p>You always retain the right to withhold personal information from us, with the
+      understanding that your experience of our website may be affected. We will not
+      discriminate against you for exercising any of your rights over your personal information.
+      If you do provide us with personal information, you understand that we will collect, hold,
+      use and disclose it in accordance with this privacy policy. You retain the right to request
+      details of any personal information we hold about you.</p>
+    <p>If we receive personal information about you from a third party, we will protect it as set
+      out in this privacy policy. If you are a third party providing personal information about
+      somebody else, you represent and warrant that you have such person’s consent to
+      provide the personal information to us.</p>
+    <p>If you have previously agreed to us using your personal information for direct marketing
+      purposes, you may change your mind at any time. We will provide you with the ability to
+      unsubscribe from our email database or opt out of communications. Please be aware
+      we may need to request specific information from you to help us confirm your identity.</p>
+    <p>If you believe that any information we hold about you is inaccurate, out of date,
+      incomplete, irrelevant, or misleading, please contact us using the details provided in this
+      privacy policy. We will take reasonable steps to correct any information found to be
+      inaccurate, incomplete, misleading, or out of date.</p>
+    <p>If you believe that we have breached a relevant data protection law and wish to make a
+      complaint, please contact us using the details below and provide us with full details of
+      the alleged breach. We will promptly investigate your complaint and respond to you, in
+      writing, setting out the outcome of our investigation and the steps we will take to deal
+      with your complaint. You also have the right to contact a regulatory body or data
+      protection authority in relation to your complaint.</p>
 
-    <h3>Assignment</h3>
-    <p>The Koin Mobile LLC is allowed to assign, transfer, and subcontract its rights and/or obligations under these
-      Terms without any notification. However, you are not allowed to assign, transfer, or subcontract any of your
-      rights and/or obligations under these Terms.</p>
+    <!--Limits of Our Policy-->
+    <h3>Limits of Our Policy</h3>
+    <p>Our website may link to external sites that are not operated by us. Please be aware that
+      we have no control over the content and policies of those sites and cannot accept
+      responsibility or liability for their respective privacy practices.</p>
 
-    <h3>Entire Agreement</h3>
-    <p>These Terms constitute the entire agreement between Koin Mobile LLC and you in relation to your use of this
-      Website, and supersede all prior agreements and understandings.</p>
+    <!--Changes to This Policy-->
+    <h3>Changes to This Policy</h3>
+    <p>At our discretion, we may change our privacy policy to reflect updates to our business
+      processes, current acceptable practices, or legislative or regulatory changes. If we
+      decide to change this privacy policy, we will post the changes here at the same link by
+      which you are accessing this privacy policy.</p>
+    <p>If required by law, we will get your permission or give you the opportunity to opt in to or
+      opt out of, as applicable, any new uses of your personal information.</p>
 
-    <h3>Governing Law & Jurisdiction</h3>
-    <p>These Terms will be governed by and interpreted in accordance with the laws of the State of Nevada, USA, and you
-      submit to the non-exclusive jurisdiction of the state and federal courts located in us for the resolution of any
-      disputes. </p>
-
+    <!--Contact Us-->
+    <h3>Contact Us</h3>
+    <p>For any questions or concerns regarding your privacy, you may contact us using the
+      following details: <a
+        (click)="openBrowser('https://koinpayments.com/contact/?s=Sales%20Inquiry')">https://www.koinpayments.com/contact-us</a>
+    </p>
   </div>
 </body>
