--- a/src/koin-privacy-policy.html
+++ b/src/koin-privacy-policy.html
@@ -70,8 +70,10 @@
 
 <body>
   <div class="container">
-    <h1>Koin Privacy Policy</h1>
 
+    <section class="document-header">Koin Privacy Policy</section>
+
+    <h1>Koin Privacy Policy</h1>
     <p>
       Your privacy is important to us. It is Koin Mobile LLC's policy to respect your privacy
       and comply with any applicable law and regulation regarding any personal information
