--- a/src/banks-terms-condition.html
+++ b/src/banks-terms-condition.html
@@ -56,10 +56,11 @@
 
 <body>
   <div class="container">
-    <section class="document-header">KOIN - Card Holder Agreement</section>
+    <!-- <section class="document-header">KOIN - Card Holder Agreement</section> -->
 
-    <h1 style="margin-bottom: 8px;">KOIN - Card Holder Agreement</h1>
-    <p style="margin-top: 0;">Revised 11.15.2023</p>
+    <h1 style="margin-bottom: 8px;">Bank Account Agreement</h1>
+    <!-- <h1 style="margin-bottom: 8px;">Bank's Terms and Conditions</h1> -->
+    <!-- <p style="margin-top: 0;">Revised 11.15.2023</p> -->
     <table class="bordered">
       <tr>
         <td style="padding-bottom: 40px; width: 25%;">
