--- a/src/california-privacy-policy.html
+++ b/src/california-privacy-policy.html
@@ -71,7 +71,7 @@
 
 <body>
   <div class="container">
-    <section class="document-header">Supplemental Privacy Policy for California Residents</section>
+    <!-- <section class="document-header">Supplemental Privacy Policy for California Residents</section> -->
     
     <h1>Supplemental Privacy Policy for California Residents</h1>
 
