--- a/src/koin-privacy-policy.html
+++ b/src/koin-privacy-policy.html
@@ -71,7 +71,7 @@
 <body>
   <div class="container">
 
-    <section class="document-header">Koin Privacy Policy</section>
+    <!-- <section class="document-header">Koin Privacy Policy</section> -->
 
     <h1>Koin Privacy Policy</h1>
     <p>
