--- a/src/bank-privacy-policy.html
+++ b/src/bank-privacy-policy.html
@@ -70,7 +70,7 @@
 
 <body>
   <div class="container">
-    <section class="document-header">Bank Privacy Policy</section>
+    <!-- <section class="document-header">Bank Privacy Policy</section> -->
 
     <h1>Bank Privacy Policy</h1>
 
